# pasta

./: .gitignore  AUTHORS  ChangeLog  Doxyfile.in  Makefile.am  README.md  bootstrap.sh  configure.ac
check/: Makefile.am  make_test_list.sh  run_unit_tests.sh
check/libs/: Makefile.am
check/libs/pasta/: Makefile.am
check/libs/pasta/core/: Makefile.am  comp.cc  config_parser.cc  dired_io.cc  mcmc.cc  meta.cc  rand.cc  reset_state.cc  rot.cc  sampler.cc  slicing.cc  stats.cc
check/libs/pasta/sanity/: Makefile.am
doc/: customdoxygen.css  layout.xml
doc/examples/: example.cc
libs/: Makefile.am
libs/pasta/: Makefile.am
libs/pasta/pasta/: core.hh  distributions.hh  domains.hh  statistics.hh  utilities.hh
libs/pasta/pasta/Core/: defs.hh  meta.hh  roots.hh  visitors.hh
libs/pasta/pasta/Distributions/: Bernoulli.hh  Bernoulli.hxx  Densities.hh  Distribution.hh  Distribution.hxx  Gaussian.hh  Gaussian.hxx  Poisson.hh  Poisson.hxx  RUniform.hh  RUniform.hxx  distrbase.hh  distrbase.hxx
libs/pasta/pasta/Domains/: DiscreteDom.hh  DiscreteDom.hxx
libs/pasta/pasta/Functional/: Function.hh
libs/pasta/pasta/Statistics/: EmpiricalStats.hh  KernelSmooth.hh  KernelSmooth.hxx  Kernels.hh  Kernels.hxx  Samplers.hh  Samplers.hxx  StatsOps.hh  StatsOps.hxx  samplersbase.hh  samplersbase.hxx
libs/pasta/pasta/Utilities/: ConfigParser.hh  ConfigParser.hxx  computations.hh  computations.hxx  io.hh  io.hxx  pimpl.hh  pimpl.hxx  tuple_hash.hh  utils.hh  utils.hxx
m4/: pasta.m4
